# halfs

./: .gitignore  LICENSE  README.md  halfs.cabal
Halfs/: BlockMap.hs  Classes.hs  CoreAPI.hs  Directory.hs  Errors.hs  File.hs  HalfsState.hs  Inode.hs  Monad.hs  MonadUtils.hs  Protection.hs  SuperBlock.hs  Types.hs  Utils.hs
System/Device/: .BlockDevice.hs.swp  BlockDevice.hs  File.hs  Memory.hs  ST.hs
fuse/src/: Halfs.hs
perf/: halfs-bonnie++-dataset1  halfs-bonnie++-dataset2.xls
scripts/: runbonnie++  runtests  scratch-stresstest
test/: halfs-test.cabal
test/fuse/src/: Halfs.hs
test/scripts/: scratch-stresstest
test/src/: Driver.hs
test/src/Tests/: BlockDevice.hs  BlockMap.hs  CoreAPI.hs  Inode.hs  Instances.hs  Serdes.hs  Types.hs  Utils.hs
