name:          halfs
version:       2.0
license:       BSD3
license-file:  LICENSE
author:        Joel Stanley <intractable@gmail.com>,
               Adam Wick <awick@galois.com>,
               Isaac Jones <ijones@galois.com>
maintainer:    Joel Stanley <intractable@gmail.com>
description:   A library implementing a file system suitable for use in 
               HaLVMs.  Provides useful abstractions over the underlying 
               block layer.
synopsis:      The HAskelL File System ("halfs" -- intended for use on the HaLVM)
category:      System
stability:     experimental
build-type:    Simple
cabal-version: >= 1.16
tested-with:   GHC == 7.6.3

source-repository head
  type:     git
  location: https://github.com/GaloisInc/halfs.git 

library
  build-depends:
                    array,
                    base >= 4 && < 5,
                    bytestring,
                    cereal,
                    containers,
                    filepath,
                    fingertree,
                    mtl,
                    random,
                    time


  Exposed-Modules:
                    Halfs.BlockMap,
                    Halfs.Classes,
                    Halfs.CoreAPI,
                    Halfs.Directory,
                    Halfs.Errors,
                    Halfs.File,
                    Halfs.HalfsState,
                    Halfs.Inode,
                    Halfs.Monad,
                    Halfs.MonadUtils,
                    Halfs.Protection,
                    Halfs.SuperBlock,
                    Halfs.Types,
                    Halfs.Utils,
                    System.Device.BlockDevice,
                    System.Device.File,
                    System.Device.Memory,
                    System.Device.ST

  default-extensions:
                    BangPatterns,
                    FlexibleContexts,
                    FlexibleInstances,
                    FunctionalDependencies,
                    GeneralizedNewtypeDeriving,
                    MultiParamTypeClasses,
                    ScopedTypeVariables

  hs-source-dirs   : .
  GHC-Options      : -Wall -fno-ignore-asserts 
  ghc-prof-options : -prof -auto-all
  default-language : Haskell2010