name:          halfs-test
version:       2.0
license:       BSD3
license-file:  LICENSE
author:        Joel Stanley <intractable@gmail.com>,
               Adam Wick <awick@galois.com>,
               Isaac Jones <ijones@galois.com>
maintainer:    Joel Stanley <intractable@gmail.com>
description:   Test suite for Halfs library, implemented atop Unix and FUSE.
category:      System
stability:     experimental
build-type:    Simple
cabal-version: >= 1.16
tested-with:   GHC == 7.6.3

library
  build-depends:
                 QuickCheck,
                 array,
                 base >= 4 && < 5,
                 bytestring,
                 cereal,
                 containers,
                 directory,
                 filepath,
                 fingertree,
                 halfs,
                 mtl,
                 random,
                 time

  Exposed-Modules:
                 Tests.Utils,
                 Tests.Instances,
                 Tests.Types

  hs-source-dirs   : src
  ghc-options      : -Wall -fno-ignore-asserts -threaded
  ghc-prof-options : -prof -auto-all
  default-language : Haskell2010

executable halfs-tests
  build-depends:
                 QuickCheck,
                 array,
                 base >= 4 && < 5,
                 bytestring,
                 cereal,
                 containers,
                 directory,
                 filepath,
                 fingertree,
                 halfs,
                 mtl,
                 random,
                 time,
                 halfs-test

  hs-source-dirs   : src
  main-is          : Driver.hs
  ghc-options      : -Wall -fno-ignore-asserts -threaded
  ghc-prof-options : -prof -auto-all
  default-language : Haskell2010

executable halfs
  build-depends:
                 HFuse >= 0.2.4.5,
                 array,
                 base >= 4 && < 5,
                 bytestring,
                 containers,
                 directory,
                 halfs,
                 unix,
                 halfs-test

  hs-source-dirs   : fuse/src
  main-is          : Halfs.hs
  ghc-options      : -Wall -fno-ignore-asserts -threaded
  ghc-prof-options : -prof -auto-all
  default-language : Haskell2010